# lang

./: LICENSE  Lang.cabal  README.md  lang.cabal
src/: Main.hs
src/Lang/: Core.hs  DependencyAnalysis.hs  Expr.hs  Identifier.hs  Parser.hs  PrettyPrint.hs  Type.hs  TypeInference.hs
tests/: TestSuite.hs
tests/Lang/DependencyAnalysis/: Tests.hs
tests/Lang/Parser/: Tests.hs
tests/Lang/Type/: Tests.hs
tests/Lang/TypeInference/: Tests.hs
