name:                Lang
version:             0.1.0.0
synopsis:            Programming language
description:         Please see README.md
homepage:            https://github.com/githubuser/lang#readme
license:             BSD3
license-file:        LICENSE
author:              Alan Moy
maintainer:          alan@themoys.org
copyright:           2017 Alan Moy
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
  exposed-modules:      Lang.Core,
                        Lang.Type,
                        Lang.DependencyAnalysis
  build-depends:        base >= 4.7 && < 5,
                        containers

executable lang
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Lang.Core,
                        Lang.Type,
                        Lang.DependencyAnalysis
  build-depends:        Lang,
                        base >= 4.7 && < 5,
                        containers

test-suite lang-tests
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src tests
  main-is:              TestSuite.hs
  ghc-options:          -Wall
  other-modules:        Lang.Type.Tests,
                        Lang.DependencyAnalysis.Tests,
                        Lang.Core,
                        Lang.Type,
                        Lang.DependencyAnalysis
  build-depends:        Lang,
                        HUnit,
                        tasty,
                        tasty-hunit,
                        base >= 4.7 && < 5,
                        containers
